test/files/neg/unit2anyref.scala
object Test {
  val x: AnyRef = ()  // this should not succeed.
}
